--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -6,6 +6,11 @@
   position: relative;
 }
 
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+
 .closeBtn {
   position: absolute;
   top: 82px;
