--- a/src/components/Badge/Badge.module.css
+++ b/src/components/Badge/Badge.module.css
@@ -1,9 +1,7 @@
 .badge {
   padding: 6px 12px;
   border-radius: 8px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
+  font: var(--font-small);
 }
 
 .pink {
