--- a/src/components/CustomTooltip/CustomTooltip.module.css
+++ b/src/components/CustomTooltip/CustomTooltip.module.css
@@ -2,9 +2,7 @@
   border-radius: 8px!important;
   border: 1px solid var(--divider-color)!important;
   background-color: var(--white-color)!important;
-  font-weight: 500!important;
-  font-size: 14px!important;
-  line-height: 20px!important;
+  font: var(--font-small)!important;
   color: #4e4e4e!important;
   padding: 6px 12px!important;
 }
