--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,9 +21,7 @@
 }
 
 .selectText {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
+  font: var(--font-medium);
   color: var(--text-light);
 }
 
