--- a/src/components/MenuList/MenuList.module.css
+++ b/src/components/MenuList/MenuList.module.css
@@ -10,9 +10,7 @@
 }
 
 .title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
+  font: var(--font-medium);
   color: var(--text-light);
 }
 
@@ -41,8 +39,6 @@
 }
 
 .itemName {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
+  font: var(--font-medium);
   color: var(--black-color);
 }
