--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -12,9 +12,7 @@
 
 .tabItem {
   padding: 12px 16px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
+  font: var(--font-small);
   color: var(--text-light);
 }
 
