--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,11 @@ body {
   --black-color: #222;
   --divider-color: #d4d9e4;
 
-  /* #A3A3A3 */
-  /* #D4D9E4 */
+  --font-small: 500 14px/20px 'Inter Tight', sans-serif;
+  --font-medium: 500 16px/24px 'Inter Tight', sans-serif;
+  --font-large: 500 18px/28px 'Inter Tight', sans-serif;
+  --font-xlarge: 600 24px/32px 'Inter Tight', sans-serif;  
+  --font-title: 500 36px/44px 'Inter Tight', sans-serif;
 }
 
 body {
