--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,11 @@
   padding: 64px 40px 0;
   max-width: 1580px;
 }
+
+.react-datepicker-wrapper {
+  display: block !important;
+}
+
+.react-select-container {
+  color: red;
+}
